added custom user on django admin
- created forms for django admin
- registration of custom user on admin
- update header in base template
- updated readme

--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block title %} {{title}} {% endblock title %}
 
+{% block header %}
+    {{block.super}}
+{% endblock header %}
 {% block content %}
 <div class="container px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
