--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,7 @@
                 </div>
             </div>
         </nav>
+        {% block header %}
         <!-- Page Header-->
         <header class="masthead" style="background-image: url('static/assets/img/home-bg.jpg')">
             <div class="container position-relative px-4 px-lg-5">
@@ -48,10 +49,11 @@
                 </div>
             </div>
         </header>
+        {% endblock header %}
         <!-- Main Content-->
-        {% block content%}
+        {% block content %}
 
-        {% endblock content%}
+        {% endblock content %}
         <!-- Footer-->
         <footer class="border-top">
             <div class="container px-4 px-lg-5">
