--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -23,6 +23,9 @@
                     </div>
                     <!-- Content -->
                     <!-- Post Content-->
+                    {% if request.user == post.author %}
+                    <a href="{% url 'post_update' post.pk post.slug %}">Update Post</a>
+                    {% endif %}
                     <article class="mb-4">
                         <div class="container px-4 px-lg-5">
                             <div class="row gx-4 gx-lg-5 justify-content-center">
